# symdetect

./: .gitignore  CMakeLists.txt
src/: geom.cpp  image_stacker.cpp  main.cpp  symdetect.cpp  symdetect.hpp
